--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Default.html
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Default.html
@@ -77,6 +77,26 @@
 			transition: width 3s, left 3s;
 			position: absolute;
 		}
+
+        .employee-photo {
+            display: inline-block;
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            background-size: 32px 35px;
+            background-position: center center;
+            vertical-align: middle;
+            line-height: 32px;
+            box-shadow: inset 0 0 1px #999, inset 0 0 10px rgba(0,0,0,.2);
+            margin-left: 5px;
+        }
+
+        .employee-name {
+            display: inline-block;
+            vertical-align: middle;
+            line-height: 32px;
+            padding-left: 3px;
+        }
 	</style>
 </head>
 <body style="padding: 0px; margin: 0px">
