--- a/Wisej.DemoBrowser/Default.html
+++ b/Wisej.DemoBrowser/Default.html
@@ -79,6 +79,17 @@
 			transition: width 3s, left 3s;
 			position: absolute;
 		}
+
+        .qx-listview-grid-cell-icon {
+            background-size: cover !important;
+            border: 1px solid gray;
+            border-radius: 100px;
+        }
+
+        div[class*='qx-listview-item'] > img {
+            border: 2px solid gray;
+            border-radius: 100px;
+        }
 	</style>
 </head>
 <body style="padding: 0px; margin: 0px">
