Mixin fix. Icon pack fixes.

--- a/Wisej.DemoBrowser/Default.html
+++ b/Wisej.DemoBrowser/Default.html
@@ -86,7 +86,7 @@
             border-radius: 100px;
         }
 
-        div[class*='qx-listview-item'] > img {
+        div[class*='qx-listview-item'][name^="listViewIcons"] > img {
             border: 2px solid gray;
             border-radius: 100px;
         }
