--- a/Wisej.DemoBrowser/Default.html
+++ b/Wisej.DemoBrowser/Default.html
@@ -80,17 +80,9 @@
 			position: absolute;
 		}
 
-        .qx-listview-grid-cell-icon {
-            background-size: cover !important;
-            border: 1px solid gray;
-            border-radius: 100px;
+        .shadow {
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
         }
-
-        div[class*='qx-listview-item'][name^="listViewIcons"] > img {
-            border: 2px solid gray;
-            border-radius: 100px;
-        }
-
 
 	</style>
 </head>
