--- a/Wisej.DemoBrowser/Default.html
+++ b/Wisej.DemoBrowser/Default.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge;IE=11" />
 	<meta property="og:title" content="Wisej Demo Browser - Full Control Suite" />
-	<meta property="og:site_name" content="demo.wisej.com/demos" />
+	<meta property="og:site_name" content="wisej-demobrowser.azurewebsites.net" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="http://demo.wisej.com/demos" />
+	<meta property="og:url" content="http://wisej-demobrowser.azurewebsites.net" />
 
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 	<meta http-equiv="Pragma" content="no-cache" />
