Updated OpenGraph links

--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion2.Demo/Default.html
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion2.Demo/Default.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;IE=11" />
     <meta property="og:title" content="Wisej Syncfusion EJ2 Integration - Full Control Suite" />
-    <meta property="og:site_name" content="demo.wisej.com/demos" />
+    <meta property="og:site_name" content="wisej-demobrowser.azurewebsites.net/Syncfusion2" />
     <meta property="og:type" content="website" />
 
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
