--- a/Wisej.DemoBrowser/Default.html
+++ b/Wisej.DemoBrowser/Default.html
@@ -20,6 +20,7 @@
 
 	<script src="wisej.wx"></script>
 	<style>
+
 		#splash {
 			position: absolute;
 			background: url("Images/splash.png");
@@ -81,6 +82,61 @@
 			transition: width 3s, left 3s;
 			position: absolute;
 		}
+
+        @media screen and (max-width: 400px) {
+            #splash {
+                position: absolute;
+                background: url("Images/wisej-logo.png");
+                background-position: center center;
+                background-size: 203px 68px;
+                background-repeat: no-repeat;
+                background-color: #F2F5F6;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+                opacity: 0;
+                transition: opacity 2s;
+            }
+
+            #loading {
+                color: black;
+                font-family: Arial, Helvetica, sans-serif;
+                font-weight: 300;
+                font-size: 18px;
+                letter-spacing: 5px;
+                text-align: center;
+                width: 250px;
+                position: absolute;
+                bottom: calc(16% + 30px);
+                margin-left: 50%;
+                left: -125px;
+            }
+
+            #loading-bar {
+                background-color: #FFFFFF;
+                width: 250px;
+                height: 13px;
+                margin-left: 50%;
+                left: -125px;
+                border-radius: 13px;
+                position: absolute;
+                bottom: 16%;
+            }
+
+            #loading-progress {
+                background-color: #005FCA;
+                height: 100%;
+                border-radius: 13px;
+                width: 10px;
+                transition: width 3s, left 3s;
+                position: absolute;
+            }
+
+			#strike {
+				display: none;
+			}
+        }
+
 
 		.shadow {
 			border-radius: 4px;
